# inference-agent

./: .gitignore  CLAUDE.md  PLAN.md  README.md  config.yaml  pyproject.toml
docs/: benchmarking.md
engine-docs/sglang/: cli_params.curated.md  cli_params.llm.md  cli_params.md
engine-docs/vllm/: cli_params.curated.md  cli_params.llm.md  cli_params.md
scripts/: llmify_engine_docs.py
src/inference_agent/: agent.py  cli.py  models.py  state.py
src/inference_agent/benchmark/: gpu_monitor.py  runner.py  smoke_tests.py
src/inference_agent/db/: __init__.py  engine.py  mappers.py  models.py  repository.py
src/inference_agent/engines/: base.py  sglang.py  vllm.py
src/inference_agent/models_pkg/: __init__.py  config.py  domain.py  llm_schemas.py
src/inference_agent/nodes/: analyzer.py  discovery.py  executor.py  history_loader.py  planner.py  reporter.py  validator.py
src/inference_agent/utils/: codex.py  docker.py  llm.py  logging.py  metrics.py
streamlit_app/: app.py  db.py
tests/: test_aggregation_workload.py  test_analyzer.py  test_benchmark_aggregation.py  test_codex.py  test_correctness_gate.py  test_db_mappers.py  test_db_repository.py  test_engines.py  test_failure_classification.py  test_history_loader.py  test_llm.py  test_metrics.py  test_percentiles.py  test_phases.py  test_planner.py  test_planner_failures.py  test_reporter.py  test_summary_digest.py  test_validator.py
